<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_weight="0.75"
        android:background="@color/black"
        android:gravity="center|end"
        android:text="@string/cero"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/black">

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="20"
                android:backgroundTint="@color/white"
                android:text="@string/limpiar"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:backgroundTint="@color/naranja"
                android:text="@string/division"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#272323">

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/siete"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:iconTint="#FFFCFC"
                app:rippleColor="@color/white" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/ocho"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/nueve"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/naranja"
                android:text="@string/multiplicacion"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#272323">

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/cuatro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/cinco"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/seis"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button12"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/naranja"
                android:text="@string/menos"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#272323">

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/uno"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button16"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/dos"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button15"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/tres"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:backgroundTint="@color/naranja"
                android:text="@string/mas"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#272323">

            <Button
                android:id="@+id/button20"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="10"
                android:backgroundTint="@color/gris"
                android:text="@string/cero"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button19"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris"
                android:text="@string/punto"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button18"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/naranja"
                android:text="@string/igual"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>